# FastAPI-template

./: .dockerignore  .gitignore  Dockerfile  README.md  _environments.json  docker-entrypoint.sh  logger.yaml  pyproject.toml  requirements.txt
app/: api.py  factory.py
app/core/: config.py  formatter.py  responses.py  secruity.py
app/core/config/: __init__.py  base.py  email.py  log.py  project.py  setting.py
app/middlewares/: __init__.py  timer.py
app/routes/: __init__.py
app/routes/user/: __init__.py
